--- a/restaurant_manager.routing.yml
+++ b/restaurant_manager.routing.yml
@@ -1,7 +1,7 @@
 restaurant_manager.content:
-  path: '/hello'
+  path: '/restaurant'
   defaults:
-    _controller: '\Drupal\hello_world\Controller\HelloController::content'
-    _title: 'Hello World'
+    _controller: '\Drupal\restaurant_world\Controller\RestaurantController::content'
+    _title: 'Hello, Food'
   requirements:
     _permission: 'access content'
