--- a/restaurant_manager.routing.yml
+++ b/restaurant_manager.routing.yml
@@ -2,6 +2,6 @@ restaurant_manager.content:
   path: '/restaurant'
   defaults:
     _controller: '\Drupal\restaurant_world\Controller\RestaurantController::content'
-    _title: 'Hello, Food'
+    _title: 'Hello, Food!'
   requirements:
     _permission: 'access content'
