--- a/restaurant_manager.links.menu.yml
+++ b/restaurant_manager.links.menu.yml
@@ -1,7 +1,7 @@
 restaurant_manager.admin:
   title: 'Restaurant Manager module settings'
-  description: 'Configure the Restaurant Manager module settings'
-  parent: system.admin_config_development
+  description: 'Configure the Restaurant Manager module settings.'
+  parent: system.admin_config_workflow
   route_name: restaurant_manager.content
   weight: 100
   
