--- a/restaurant_manager.info.yml
+++ b/restaurant_manager.info.yml
@@ -1,6 +1,6 @@
 name: Restaurant Manager
 description: The goal of this project is to design and implement an efficient restaurant management sub-system module for the web-based Drupal content management system (CMS).
-package: Custom
+package: SoftwareEngFall16
 
 type: module
 core: 8.x
