--- a/restaurant_manager.routing.yml
+++ b/restaurant_manager.routing.yml
@@ -2,7 +2,7 @@ restaurant_manager.admin.form:
   path: '/admin/config/workflow/restaurant_manager'
   defaults:
     _title: 'Restaurant Manager settings'
-    _controller: '\Drupal\restaurant_manager\Controller\HelloController::content'
+    _controller: '\Drupal\restaurant_manager\Controller\HelloWorld::content'
   requirements:
     _permission: 'administer restaurant manager settings'
   options:
