--- a/restaurant_manager.routing.yml
+++ b/restaurant_manager.routing.yml
@@ -2,8 +2,18 @@ restaurant_manager.admin.form:
   path: '/admin/config/workflow/restaurant_manager'
   defaults:
     _title: 'Restaurant Manager settings'
-    _controller: '\Drupal\restaurant_manager\Controller\HelloWorld::content'
+    _form: '\Drupal\restaurant_manager\Form\RestaurantManagerConfigurationForm'
   requirements:
     _permission: 'administer restaurant manager settings'
   options:
     _admin_route: true
+
+restaurant_manager.admin.form:
+  path: '/restaurant_manager/'
+  defaults:
+    _title: 'Restaurant Manager'
+    _controller: '\Drupal\restaurant_manager\Controller\HelloWorld::content'
+  requirements:
+    _permission: 'access content'
+  options:
+    _admin_route: false
