Adjust skeleton template.

--- a/theme/vmenu/vmenu.info.yml
+++ b/theme/vmenu/vmenu.info.yml
@@ -20,4 +20,8 @@ regions:
   page_bottom: 'Page bottom'
 
 libraries:
-  - 'vmenu/global-styling'
+  - 'vmenu/global-css'
+  - 'vmenu/global-js'
+  - 'vmenu/bootstrap-scripts'
+
+stylesheets-remove:
