--- a/theme/vmenu/vmenu.libraries.yml
+++ b/theme/vmenu/vmenu.libraries.yml
@@ -1,7 +1,26 @@
-global-styling:
+global-css:
   css:
     theme:
       css/style.css: {}
+      'https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css': {type: external}
 
+global-js:
   js:
-    js/theme.js: {}
+    js/main.js: {}
+  dependencies:
+    - core/jquery
+
+bootstrap-scripts:
+  js:
+    bootstrap/js/affix.js: {}
+    bootstrap/js/alert.js: {}
+    bootstrap/js/button.js: {}
+    bootstrap/js/carousel.js: {}
+    bootstrap/js/collapse.js: {}
+    bootstrap/js/dropdown.js: {}
+    bootstrap/js/modal.js: {}
+    bootstrap/js/tooltip.js: {}
+    bootstrap/js/popover.js: {}
+    bootstrap/js/scrollspy.js: {}
+    bootstrap/js/tab.js: {}
+    bootstrap/js/transition.js: {}
