--- a/theme/vmenu/vmenu.libraries.yml
+++ b/theme/vmenu/vmenu.libraries.yml
@@ -1,10 +1,10 @@
-global-css:
+global-styling:
   css:
     theme:
       css/style.css: {}
       'https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css': {type: external}
 
-global-js:
+global-scripting:
   js:
     js/main.js: {}
   dependencies:
