--- a/theme/vmenu/vmenu.libraries.yml
+++ b/theme/vmenu/vmenu.libraries.yml
@@ -1,20 +1,6 @@
-bootstrap-scripts:
-  js:
-    bootstrap/js/affix.js: {}
-    bootstrap/js/alert.js: {}
-    bootstrap/js/button.js: {}
-    bootstrap/js/carousel.js: {}
-    bootstrap/js/collapse.js: {}
-    bootstrap/js/dropdown.js: {}
-    bootstrap/js/modal.js: {}
-    bootstrap/js/tooltip.js: {}
-    bootstrap/js/popover.js: {}
-    bootstrap/js/scrollspy.js: {}
-    bootstrap/js/tab.js: {}
-    bootstrap/js/transition.js: {}
-
 global-scripting:
   js:
+    'https://cdn.jsdelivr.net/swiper/3.3.1/swiper.jquery.min.js': {type: external}
     js/main.js: {preprocess: false}
   dependencies:
     - core/jquery
@@ -22,5 +8,7 @@ global-scripting:
 global-styling:
   css:
     layout:
-      css/style.css: {preprocess: false}
       'https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css': {type: external}
+      'https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css': {type: external}
+      'https://cdn.jsdelivr.net/swiper/3.3.1/swiper.min.css': {type: external}
+      css/style.css: {preprocess: false}
