--- a/theme/vmenu/vmenu.libraries.yml
+++ b/theme/vmenu/vmenu.libraries.yml
@@ -1,7 +1,7 @@
 global-scripting:
   js:
     'https://cdn.jsdelivr.net/swiper/3.3.1/swiper.jquery.min.js': {type: external}
-    js/main.js: {preprocess: false}
+    js/scripts.min.js: {preprocess: false}
   dependencies:
     - core/jquery
 
@@ -11,4 +11,4 @@ global-styling:
       'https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css': {type: external}
       'https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css': {type: external}
       'https://cdn.jsdelivr.net/swiper/3.3.1/swiper.min.css': {type: external}
-      css/style.css: {preprocess: false}
+      css/styles.min.css: {preprocess: false}
